<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="brailleback_setup_title" translatable="false">BrailleBack</string>
    <string name="service_description">When BrailleBack is on, your device will connect to a paired bluetooth braille display and present the screen content in braille. Keys on the braille display can be used to navigate the screen, activate items and enter text. For more information, press space and dots 1, 2 and 3 (the letter l in braille) on your display when connected.</string>
    <string name="service_summary">Provide braille output</string>
    <string name="braille_ime_name">Braille hardware keyboard</string>
    <string name="ime_setup_wizard_name">Braille Hardware Keyboard Wizard</string>
    <string name="ime_setup_need_enable_title">Enable braille hardware keyboard</string>
    <string name="ime_setup_need_enable_message">To use the braille hardware keyboard, you need to enable it in the input method settings and then set it as the default input method.</string>
    <string name="ime_setup_skip">Skip</string>
    <string name="ime_setup_need_enable_positive">Open Input Method Settings</string>
    <string name="ime_setup_need_default_title">Set Default Input Method</string>
    <string name="ime_setup_need_default_message">To use the braille hardware keyboard, you need to set it as the default input method.</string>
    <string name="ime_setup_need_default_positive">Open Input Method Picker</string>
    <string name="permlab_displayConnect">Connect to a braille display</string>
    <string name="permdesc_displayConnect">Allows an app to write output to and and read keyboad input from a braille display</string>
    <string name="checkmark_not_checked" translatable="false">( )</string>
    <string name="checkmark_checked" translatable="false">(x)</string>
    <string name="type_emptygridview">Empty Grid</string>
    <string name="type_gridview">Grid</string>
    <string name="type_emptylistview">Empty List</string>
    <string name="type_listview">List</string>
    <string name="type_emptyscrollview">Empty Scrollable Content</string>
    <string name="type_scrollview">Scrollable Content</string>
    <string name="type_edittext">Edit Box</string>
    <string name="type_image">Image</string>
    <string name="type_button">Button</string>
    <string name="type_seekbar">Seek Control</string>
    <string name="type_quickcontact">Contact</string>
    <string name="preferences_title">BrailleBack Preferences</string>
    <string name="pref_category_device_title">Device</string>
    <string name="pref_connection_status_title">Status</string>
    <string name="pref_key_bindings_title">Keyboard help</string>
    <string name="pref_category_braille_title">Braille</string>
    <string name="pref_braille_type_title">Braille type</string>
    <string name="pref_six_dot_braille_table_title">Literary braille table</string>
    <string name="pref_eight_dot_braille_table_title">Computer braille table</string>
    <string name="pref_braille_word_wrap_title">Enable word wrapping</string>
    <string name="connstate_not_connected">Not connected</string>
    <string name="connstate_connected">Connected</string>
    <string name="connstate_error">Not available</string>
    <string name="pref_braille_type_six_dot_label">Literary braille</string>
    <string name="pref_braille_type_eight_dot_label">Computer braille</string>
    <string name="pref_braille_table_default_label">Auto (<xliff:g id="table_name">%1$s</xliff:g>)</string>
    <string name="pref_braille_table_default_none_label">Auto (none)</string>
    <string name="pref_category_miscellaneous_title">Miscellaneous</string>
    <string name="pref_category_developer_title">Developer options</string>
    <string name="pref_category_braille_overlay_title">On-screen overlay</string>
    <string name="pref_braille_overlay_title">Show Braille output on screen</string>
    <string name="pref_braille_overlay_tutorial_title">Launch tutorial</string>
    <string name="pref_os_license_title">Open Source Licenses</string>
    <string name="pref_log_level_label">Log output level</string>
    <string name="key_bindings_title">BrailleBack Keyboard help</string>
    <string name="display_connected">brlback on</string>
    <string name="shutting_down">brlback off</string>
    <string name="braille_keyboard_active">BrailleBack keyboard active</string>
    <string name="tap_to_switch_ime">Tap to switch to default keyboard</string>
    <string name="table_name_grade"><xliff:g id="locale_name">%1$s</xliff:g> - grade <xliff:g id="grade_number">%2$d</xliff:g></string>
    <string name="table_name_variant"><xliff:g id="locale_name">%1$s</xliff:g> (<xliff:g id="variant">%2$s</xliff:g>)</string>
    <string name="table_name_variant_grade"><xliff:g id="locale_name">%1$s</xliff:g> (<xliff:g id="variant">%2$s</xliff:g>) - grade <xliff:g id="grade_number">%3$d</xliff:g></string>
    <string name="overlay_pan_left_button">Pan left</string>
    <string name="overlay_pan_right_button">Pan right</string>
    <string name="overlay_tutorial_title">Overlay Tutorial</string>
    <string name="overlay_tutorial_finish_button">Finish</string>
    <string name="overlay_tutorial_introduction">
        The braille overlay simulates a refreshable braille display. It
        displays the braille cells, along with the corresponding text, that
        would be presented on a hardware display. It is recommended that you
        enable TalkBack and touch exploration mode before proceeding.
    </string>
    <string name="overlay_tutorial_accessibility_settings_button">Accessibility Settings</string>
    <string name="overlay_tutorial_pan">
        You can pan the braille display by pressing one of the panning buttons
        next to the text.
    </string>
    <string name="overlay_tutorial_routing_keys">
        Multiple elements may appear on the display at once. You can click
        on one of them by tapping one of the braille cells in the text.
        This corresponds to pressing one of the routing keys on a braille
        display.
    </string>
    <string name="overlay_tutorial_moving">
        If the overlay is covering another element on the screen, you can move
        it out of the way. Long-press the overlay, and then drag it. It will
        snap to the top or bottom of the screen when you release your finger.
    </string>
    <string name="overlay_tutorial_dialog_title">Show Overlay Tutorial</string>
    <string name="overlay_tutorial_dialog_message">
        We recommend that you view the tutorial for the on-screen overlay
        before using it.
    </string>
    <string name="search_result_prefix">S:</string>
    <string name="search_dialog_label">
        Search: <xliff:g id="search_query">%1$s</xliff:g></string>
    <string name="search_tutorial_title">Search on Screen Tutorial</string>
    <string name="search_tutorial_instructions_general">
        Search on screen allows you to quickly jump to items on the screen by
        typing part of their text description. As you type, focus will move to
        the next matching item.
    </string>
    <string name="search_tutorial_instructions_specific">
        Use <xliff:g id="next_key_command">%1$s</xliff:g> to move to the next
        result and <xliff:g id="previous_key_command">%2$s</xliff:g> to move to
        the previous result. Press
        <xliff:g id="enter_key_command">%3$s</xliff:g> to exit the search mode
        and keep focus on the result. Press
        <xliff:g id="toggle_search_key_command">%4$s</xliff:g> to move back to
        the previously focused item.
    </string>
    <string name="search_tutorial_checkbox">Never show this again</string>
    <string name="search_tutorial_close_button">Continue</string>
    <string name="menu_item_label_add">Add custom label</string>
    <string name="menu_item_label_edit">Edit custom label</string>
    <string name="menu_item_label_remove">Remove custom label</string>
    <string name="menu_item_update_talkback">Custom labels not supported. Update talkback</string>
</resources>